--- a/idk/idx.html
+++ b/idk/idx.html
@@ -6,25 +6,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="./idk.css" />
   </head>
-
   <body>
-    <div class="card">
-
-
-        <h1>
-            Food delivery
-            
-        </h1>
-        <h2>From Restuarants</h2>
-        <div>
-            UPto 60% Off
-        </div>
-
-
-        <div>
-<img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto/MERCHANDISING_BANNERS/IMAGES/MERCH/2024/7/23/ec86a309-9b06-48e2-9adc-35753f06bc0a_Food3BU.png" alt="">
-            <img src="https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto/MERCHANDISING_BANNERS/IMAGES/MERCH/2024/7/23/ec86a309-9b06-48e2-9adc-35753f06bc0a_Food3BU.png" alt="">
-        </div>
-    </div>
+    <section class="row-center">
+      <img id="pizza" src="./pizza.avif" alt="" />
+      <img id="burger" src="./burger.avif" alt="" />
+      <img id="momos" src="./momos.avif" alt="" />
+      <img id="tomato2" src="tomato-2.avif" alt="" />
+      <img id="tomato" src="tomato.avif" alt="" />
+      <img src="./mint.avif" id="mint" alt="" />
+      <img src="./line1.avif" id="line1" alt="" />
+      <img src="./line2.avif" id="line2" alt="" />
+      <div class="text-content">
+        <h1 class="text-heading">Better food for more people</h1>
+        <p class="text-desc">
+          For over a decade, we’ve enabled our customers to discover new tastes,
+          delivered right to their doorstep
+        </p>
+      </div>
+    </section>
   </body>
 </html>
